Travel::Status::DE::IRIS 1.56 - Sun Jun 20 2021

    * Update IRIS station list. Adds support for lots of
      Albtal-Verkehrs-Gesellschaft stations around Karlsruhe
    * Update some delay/qos messages ahead of a DB-wide change planned for
      October 2021

Travel::Status::DE::IRIS 1.55 - Tue May 04 2021

    * Fix transfer trains getting lost when requested from a related station.
      Notable offender: "Berlin Südkreuz" lacked S 41 / S42 (ring line
      from Südkreuz (S) to Südkreuz (S) with transfer to/from the next/previous
      incarnation), as it referenced "Berlin Südkreuz (S)". "Berlin Südkreuz (S)"
      itself worked fine.


Travel::Status::DE::IRIS 1.54 - Sat Jan 09 2021

    * Add stations DKP, DRBS, DSBG, KWHD, NCBD, TENS, XLHW

Travel::Status::DE::IRIS 1.53 - Sun Dec 13 2020

    * import station name changes and station removals from Winterfahrplan
      2021

Travel::Status::DE::IRIS 1.52 - Sun Nov 22 2020

    * get_station_by_name: Fix crash (unhandled exception) when the station
      name is an invalid regular expression

Travel::Status::DE::IRIS 1.51 - Thu Oct 22 2020

    * Add BER airport stations
    * Rename Schönefeld airport to BER Terminal 5

Travel::Status::DE::IRIS 1.50 - Thu Oct 15 2020

    * Add station Brunnen(Oberbay)
    * Incorporate station name and eva number changes from DB IRIS
      (affects nine stations)
    * Add geocoordinates to 17 stations previously lacking those

Travel::Status::DE::IRIS 1.49 - Sat Oct 03 2020

    * Add station Jaderberg

Travel::Status::DE::IRIS 1.48 - Sat Aug 22 2020

    * Add stations Neuruppin Seedamm (temporary, teardown expected Dec 2020),
      Amriswil, and Baar(CH)

Travel::Status::DE::IRIS 1.47 - Sat Jun 06 2020

    * Work around (probably incorrect) IRIS coupling of
      Norddeich and Norddeich Mole stations

Travel::Status::DE::IRIS 1.46 - Mon May 04 2020

    * Document LWP::Protocol::https dependency
    * Discourage building with Geo::Distance 0.21.